...
              backgroundColor:
                  MaterialStateProperty.all<Color>(AppColors.darkRed2),
            ),
          ),
          actions: <Widget>[
            DefaultAppBarIconButton(
              key: const Key('SchedulerLogSaveButton'),
              icon: Icons.save_outlined,
              label: 'Save',
              onTap: _onTapSave,
              style: ButtonStyle(
                fixedSize: MaterialStateProperty.all<Size>(const Size(105, 55)),
                backgroundColor:
...
                        ),
                        child: Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        ),
                      ),
                      CommonTextField(
                        key: const Key('EnterTitleFieldSchedulerLog'),
                        controller: _titleController,
                        hintText: 'Enter Title',
                      ),
                      CommonTextField(
                        key: const Key('EnterDetailsFieldSchedulerLog'),
                        controller: _detailsController,
                        hintText: 'Enter Details',
                      ),
                      CommonTextField(
                        key: const Key('ChooseStartDateFieldSchedulerLog'),
                        controller: _startDateController,
                        hintText: "Choose Start Date",
                        icon: const Icon(Icons.calendar_today_outlined),
                        onTap: _onTapStartDate,
                      ),
                      CommonTextField(
                        key: const Key('ChooseStartTimeFieldSchedulerLog'),
                        controller: _timeController,
                        hintText: 'Choose Start Time',
                        onTap: () async => _onTapTimeField(),
                        icon: const Icon(Icons.more_time_outlined),
                      ),
                      CommonTextField(
                        key: const Key('ChooseEndDateFieldSchedulerLog'),
                        controller: _endDateController,
                        hintText: "Choose End Date",
                        icon: const Icon(Icons.edit_calendar_outlined),
                        onTap: _onTapEndDate,
                      ),
                      const SizedBox(height: 16),
...
