...
        padding: EdgeInsets.only(bottom: context.bottomPadding),
        child: SizedBox(
          height: kBottomNavigationBarHeight,
          child: Row(
            children: [
              _IconButton(
                key: const Key('dashboard_page_key'),
                icon: Icons.dashboard_outlined,
                label: 'Dashboard',
                isSelected: currentPage == 0,
                onTap: () => onChangePage(0),
              ),
              _IconButton(
                key: const Key('scheduler_page_key'),
                icon: Icons.date_range_outlined,
                label: 'Scheduler',
                isSelected: currentPage == 1,
                onTap: () => onChangePage(1),
              ),
              const Spacer(),
              _IconButton(
                key: const Key('about_page_key'),
                icon: Icons.info_outline,
                label: 'About',
                isSelected: currentPage == 2,
                onTap: () => onChangePage(2),
              ),
              _IconButton(
                key: const Key('settings_page_key'),
                icon: Icons.settings_applications_outlined,
                label: 'Settings',
                isSelected: currentPage == 3,
                onTap: () => onChangePage(3),
              ),
            ],
...
