...
      children: <Widget>[
        SizedBox(
          width: 400,
          child: Padding(
            padding: const EdgeInsets.only(bottom: 20, top: 10),
            child: InputField(
              key: const Key('UsernameInputFieldLogin'),
              icon: const Icon(Icons.person_outline_sharp),
              hint: "Username",
              controller: usernameController,
              obscure: false,
            ),
          ),
        ),
        SizedBox(
          width: 400,
          child: Padding(
            padding: const EdgeInsets.only(bottom: 5),
            child: InputField(
              key: const Key('PasswordInputFieldLogin'),
              icon: const Icon(Icons.lock),
              hint: "Password",
              controller: passwordController,
              obscure: true,
            ),
          ),
...
              height: 50,
              width: MediaQuery.of(context).size.width,
              child: DefaultFloatingActionButton(
                onTap: loginUser,
                isEnabled: isEnabled,
                text: 'LOGIN',
                key: const Key('LoginButton'),
              ),
            ),
          ),
        )
      ],
    );
...
